# multi-language-bazel-test

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
src/golang/: BUILD.bazel
src/python/: BUILD  hello_world.py
src/rust/: BUILD  BUILD.rm  hello_world.rs
